@@ -1,3 +1,7 @@
+Upcoming:
+- Fixed a problem with upgrading storage modules. The contents would be lost
+- New 'rftoolsstorage restore' command that you can use to restore a lost modular storage card
+
 1.16-2.0.5:
 - Update to latest McJtyLib
 
